style.css
* {
    margin: 0;
    padding: 0;
}

body,
html {
    margin: 0px;
    height: 100%;
}

.page {
    display: flex;
    flex-direction: column;
    height: 100%;
}

header {
    background-color: rgb(130, 108, 108);
    margin: 0px;
    padding: 25px;
}

.titleText {
    display: inline-block;
    background-color: aquamarine;
    padding: 3px;
}

.mainBody {
    display: flex;
    /*height: 100%;*/
    flex: 1;
}

.navigation {
    background-color: rgb(255, 212, 212);
    flex: 1;
}

.navigation ul {
    margin: 15px;
}

.mainContent {
    flex: 3;
    display: flex;
    flex-direction: column;
}

.breakingPost {
    background-color: rgb(208, 208, 221);
}

.content {
    display: flex;
    height: 100%;
}

.article {
    flex: 2;
}

.helperContent {
    flex: 1;
    background-color: rgb(245, 201, 201);
}

footer {
    display: flex;
    flex-direction: row-reverse;
    background-color: rgb(130, 108, 108);
    margin: 0px;
    padding: 25px;
}

footer .motto {
    background-color: chocolate;
}

li {
    margin-left: 25px;
}

